# payment-classification

./: .gitignore  README.md  api.py  build_tflite_model.py  config.py  data_loader.py  main.py  predict.py  preprocess.py  pyproject.toml  requirements.txt  retrain_from_test_logs.py  train.py
data/: credit.txt  debit.txt  unknow.txt
docs/: react-native-cli-native-integration.md
logs/: cv_results.csv
models/: classifier.pkl  classifier.tflite  label_encoder.pkl  metadata.json  tflite_labels.json  vectorizer.pkl
test/: run_model_test.py
test/data/: credit.txt  debit.txt  unknow.txt
test/log/: model_test_predictions.csv  model_test_summary.json
